Troubleshooting CSS issues for recipe rows not aligning properly

--- a/src/main/resources/static/assets/css/styles.css
+++ b/src/main/resources/static/assets/css/styles.css
@@ -21,7 +21,6 @@ h1 {
 h2 {
   font-size: 20px;
   margin-top: 25px; }
-
 nav {
   text-align: right;
   margin-top: 10px;
@@ -90,7 +89,6 @@ button {
       border-radius: 8px 8px 0 0; }
     .recipes .row:last-child {
       border-radius: 0 0 8px 8px; }
-
 .add-row {
   margin-bottom: 30px; }
 
@@ -98,7 +96,7 @@ button {
   opacity: 0;
   transition: all ease-in-out 0.3s; }
   .addHover .hoverBlock a {
-    margin-right: 12px; }
+    margin-left: 400px; }
     .addHover .hoverBlock a:last-child {
       margin-right: 0; }
 .addHover:hover .hoverBlock {
